[tool.poetry]
name = "optimus-prime"
version = "0.1.0"
description = ""
authors = ["AbinavRavi <subramathreya@gmail.com>"]
license = "Apache2.0"
readme = "README.md"
packages = [{include = "optimus_prime"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.9.1"
flake8 = "^6.1.0"
bandit = "^1.7.5"
radon = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
